force-app/main/default/objects/ClassificationAttributeTemplate__c/ClassificationAttributeTemplate__c.object-meta.xml
<CustomObject>
    <label>Classification Attribute Template</label>
    <nameField>
        <displayFormat>CAT-{000000}</displayFormat>
        <label>Classification Attribute Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classification Attribute Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>