force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttribute2Id__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttribute2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute 2 Id</label>
    <referenceTo>ClassificationAttribute__c</referenceTo>
    <relationshipLabel>Classification Attribute Templates (Classification Attribute 2 Id)</relationshipLabel>
    <relationshipName>Classification_Attribute_Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>