force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttribute2Name__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttribute2Name__c</fullName>
    <formula>ClassificationAttribute2Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute 2 Name</label>
    <type>Text</type>
</CustomField>