force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeId__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute</label>
    <referenceTo>ClassificationAttribute__c</referenceTo>
    <relationshipLabel>Classification Attribute Templates</relationshipLabel>
    <relationshipName>Classification_Attribute_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>