force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeName__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeName__c</fullName>
    <formula>ClassificationAttributeId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute Name</label>
    <type>Text</type>
</CustomField>