force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeSubValue2Id__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValue2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute Sub Value 2 Id</label>
    <referenceTo>ClassificationAttributeValue__c</referenceTo>
    <relationshipLabel>Classification Attribute Templates (Classification Attribute Sub Value 2 Id)</relationshipLabel>
    <relationshipName>Classification_Attribute_Templates3</relationshipName>
    <type>Lookup</type>
</CustomField>