force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeSubValue2Name__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValue2Name__c</fullName>
    <formula>ClassificationAttributeSubValue2Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute Sub Value2 Name</label>
    <type>Text</type>
</CustomField>