force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeSubValueId2__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValueId2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute Sub Value Id2</label>
    <referenceTo>ClassificationAttributeValue__c</referenceTo>
    <relationshipLabel>Classification Attribute Templates (Classification Attribute Sub Value Id2)</relationshipLabel>
    <relationshipName>Classification_Attribute_Templates4</relationshipName>
    <type>Lookup</type>
</CustomField>