force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeSubValueId3__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValueId3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute Sub Value Id3</label>
    <referenceTo>ClassificationAttributeValue__c</referenceTo>
    <relationshipLabel>Classification Attribute Templates (Classification Attribute Sub Value Id3)</relationshipLabel>
    <relationshipName>Classification_Attribute_Templates5</relationshipName>
    <type>Lookup</type>
</CustomField>