force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeSubValueName2__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValueName2__c</fullName>
    <formula>ClassificationAttributeSubValueId2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute Sub Value Name2</label>
    <type>Text</type>
</CustomField>