force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeSubValueName3__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValueName3__c</fullName>
    <formula>ClassificationAttributeSubValueId3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute Sub Value Name3</label>
    <type>Text</type>
</CustomField>