force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeValue2Id__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeValue2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute Value 2 Id</label>
    <referenceTo>ClassificationAttributeValue__c</referenceTo>
    <relationshipLabel>Classification Attribute Templates (Classification Attribute Value 2 Id)</relationshipLabel>
    <relationshipName>Classification_Attribute_Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>