force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeValue2Name__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeValue2Name__c</fullName>
    <formula>ClassificationAttributeValue2Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute Value 2 Name</label>
    <type>Text</type>
</CustomField>