force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeValueId__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeValueId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute Value Id</label>
    <referenceTo>ClassificationAttributeValue__c</referenceTo>
    <relationshipLabel>Classification Attribute Templates</relationshipLabel>
    <relationshipName>Classification_Attribute_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>