force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationAttributeValueName__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeValueName__c</fullName>
    <formula>ClassificationAttributeValueId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute Value Name</label>
    <type>Text</type>
</CustomField>