force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ClassificationCode__c.field-meta.xml
<CustomField>
    <fullName>ClassificationCode__c</fullName>
    <label>Classification Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>