force-app/main/default/objects/ClassificationAttributeTemplate__c/fields/ImportFeature__c.field-meta.xml
<CustomField>
    <fullName>ImportFeature__c</fullName>
    <label>Import feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>